src/objects/Apttus_Config2__GuidedSearchRuleEntry__c.object
<CustomObject>
    <description>Represents a single entry in a guided search rule</description>
    <fields>
        <fullName>Apttus_Config2__GuidedAnswer1__c</fullName>
        <description>The answer for the first guided question.</description>
        <label>Guided Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidedAnswer2__c</fullName>
        <description>The answer for the second guided question.</description>
        <label>Guided Answer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidedAnswer3__c</fullName>
        <description>The answer for the third guided question.</description>
        <label>Guided Answer 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidedSearchRuleId__c</fullName>
        <description>ID of the associated rule</description>
        <label>Guided Search Rule</label>
        <referenceTo>Apttus_Config2__GuidedSearchRule__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>GuidedSearchRuleEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaCompOper__c</fullName>
        <description>The entry inclusion criteria comparison operator</description>
        <label>Inclusion Criteria Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldName__c</fullName>
        <description>The entry inclusion criteria field</description>
        <label>Inclusion Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldValue__c</fullName>
        <description>The entry inclusion criteria value</description>
        <label>Inclusion Criteria Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchRule__c</fullName>
        <description>Indicates if the rule should match all or match any filter conditions</description>
        <label>Match Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match All</fullName>
                    <default>true</default>
                    <label>Match All</label>
                </value>
                <value>
                    <fullName>Match Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Guided Search Rule Entry</label>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guided Search Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>